# bongocat-gnu

./: .gitignore  README.md  meson.build  meson.options  snapcraft.yaml
.github/workflows/: appimage-build.yml  archlinux-build.yml  check-build.yml  flatpak-build.yml  publish-release.yml  snap-build.yml
Archlinux/: PKGBUILD
appimage/: AppImageBuilder.yml  bongo.sh  build.sh  libxdo.pc
archlinux/: PKGBUILD  bongocat  bongocat-gnu.desktop  build.sh
flatpak/: bongo.sh  bongocat-gnu.desktop  io.github.linuxdasein.bongocat_gnu.yml  org.flatpak.BongoCat.yml  org.linuxdasein.BongoCat.yml
include/: cat.hpp  cats.hpp  data.hpp  header.hpp  input.hpp  logger.hpp  math.hpp  system.hpp
share/: config.json
snap/gui/: bongocat.desktop
snap/local/: bongo.sh  libxdo.pc  snapcraft.yaml
src/: cat.cpp  cats.cpp  classic.cpp  config.cpp  ctb.cpp  custom.cpp  data.cpp  input.cpp  logger.cpp  main.cpp  mania.cpp  math.cpp  mouse.cpp  mousepaw.cpp  mousexdo.cpp  osu.cpp  settings.cpp  standard.cpp  system.cpp  taiko.cpp
